<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/strName"
        app:layout_constraintBottom_toTopOf="@+id/etPassphrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />

    <EditText
        android:id="@+id/etPassphrase"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/strPassphrase"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNewAcc"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginBottom="244dp"
        android:text="@string/strNewAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="168dp"
        android:layout_height="43dp"
        android:layout_marginBottom="68dp"
        android:text="@string/strLogin"
        app:layout_constraintBottom_toTopOf="@+id/btnNewAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>